<resources>
    <string name="app_name">Snooker Score</string>
    <string name="matches">Matches</string>
    <string name="players">Players</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="rules_web_view_title">Snooker Rules</string>
    <string name="refresh">Refresh</string>
    <string name="add_player">Add player</string>
    <string name="error_message">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="empty"/>
    <string name="app_info">App developed by Alan Camargo\n\nIllustrations by: Freepik, Those Icons, Chanut is Industries and Smashicons</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="matches_won">Matches won</string>
    <string name="highest_score">Highest score</string>
    <string name="highest_break">Highest break</string>
    <string name="delete_player">Delete player</string>
    <string name="delete_player_confirmation">Are you sure you want to delete this player? This cannot be undone and will delete everything related to him/her!</string>
    <string name="yes">Yes</string>
    <string name="players_format">%1$s vs. %2$s</string>
    <string name="new_match">New match</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="select">Select</string>
    <string name="number_of_frames">Number of frames</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="start_match">Start match</string>
    <string name="change">Change</string>
    <string name="edit_player">Edit player</string>
    <string name="frame_format">Frame %d</string>
    <string name="score_format">Score: %d</string>
    <string name="highest_break_format">Highest break: %d</string>
    <string name="delete_match">Delete match</string>
    <string name="delete_match_confirmation">Are you sure you want to delete this match? This action cannot be undone!</string>
    <string name="match">Match</string>
    <string name="winner_format">Winner: %s</string>
    <string name="pot_ball">Pot ball</string>
    <string name="undo">Undo</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="black">Black</string>
    <string name="foul">Foul</string>
    <string name="with_object_ball">With object ball</string>
    <string name="others">Others</string>
    <string name="end_turn">End turn</string>
    <string name="end_frame">End frame</string>
    <string name="break_format">Break: %d</string>
    <string name="frame_x_y_format">Frame %1$d/%2$d</string>
    <string name="error">Error</string>
    <string name="message_same_player">Players must not be the same</string>
    <string name="end_frame_confirmation">Are you sure you want to end this frame?</string>
    <string name="forfeit_match">Forfeit match</string>
    <string name="forfeit_match_confirmation">Are you sure you want to forfeit this match?</string>
    <string name="select_ball">Select ball</string>
    <string name="title_select_player">Select player</string>
    <string name="message_select_player">Who\'s starting this frame?</string>
    <string name="match_summary">Match summary</string>
    <string name="won_the_match">Won the match</string>
    <string name="view_summary">View summary</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="tip">Tip</string>
    <string name="tip_player_list_message">Click on a player card to view his/her details. To edit a player, click and hold a card</string>
</resources>