<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NewMatchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/SnookerScore.Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/new_match"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/player1Container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_02"
        android:layout_marginStart="@dimen/spacing_02"
        android:layout_marginEnd="@dimen/spacing_01"
        android:padding="@dimen/spacing_02"
        android:orientation="vertical"
        android:background="@drawable/shape_outline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player2Container">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPlayer1"
            style="@style/SnookerScore.LargeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/player_1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPlayer1Name"
            style="@style/SnookerScore.LargeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_01"
            android:gravity="center_horizontal"
            android:visibility="gone"
            tools:text="Mark Selby"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btPlayer1"
            style="@style/SnookerScore.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_01"
            android:text="@string/select"
            tools:text="@string/change"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/player2Container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_02"
        android:layout_marginStart="@dimen/spacing_01"
        android:layout_marginEnd="@dimen/spacing_02"
        android:padding="@dimen/spacing_02"
        android:orientation="vertical"
        android:background="@drawable/shape_outline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toEndOf="@id/player1Container"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPlayer2"
            style="@style/SnookerScore.LargeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/player_2"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPlayer2Name"
            style="@style/SnookerScore.LargeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_01"
            android:gravity="center_horizontal"
            android:visibility="gone"
            tools:text="Judd Trump"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btPlayer2"
            style="@style/SnookerScore.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_01"
            android:text="@string/select"
            tools:text="@string/change"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelNumberOfFrames"
        style="@style/SnookerScore.LargeBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_02"
        android:layout_marginHorizontal="@dimen/spacing_02"
        android:text="@string/number_of_frames"
        app:layout_constraintTop_toBottomOf="@id/player1Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtNumberOfFrames"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_01"
        android:layout_marginStart="@dimen/spacing_02"
        android:padding="@dimen/spacing_01"
        android:background="@drawable/shape_outline"
        app:layout_constraintTop_toTopOf="@id/btUp"
        app:layout_constraintBottom_toBottomOf="@id/btDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:text="3"/>

    <ImageButton
        android:id="@+id/btUp"
        style="@style/SnookerScore.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_02"
        android:layout_marginStart="@dimen/spacing_02"
        android:background="@drawable/shape_circular_outline"
        android:src="@drawable/ic_chevron_up"
        android:contentDescription="@string/more"
        app:layout_constraintTop_toBottomOf="@id/labelNumberOfFrames"
        app:layout_constraintBottom_toTopOf="@+id/btDown"
        app:layout_constraintStart_toEndOf="@id/txtNumberOfFrames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageButton
        android:id="@+id/btDown"
        style="@style/SnookerScore.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_02"
        android:background="@drawable/shape_circular_outline"
        android:src="@drawable/ic_chevron_down"
        android:contentDescription="@string/less"
        app:layout_constraintTop_toBottomOf="@id/btUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btUp"
        app:layout_constraintEnd_toEndOf="@id/btUp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btStartMatch"
        style="@style/SnookerScore.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_03"
        android:layout_marginEnd="@dimen/spacing_03"
        android:text="@string/start_match"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>